加扫码体验

--- a/src/plugin/components/ChatBox/index.less
+++ b/src/plugin/components/ChatBox/index.less
@@ -10,11 +10,24 @@
         background: #FFFFFF;
         border: 0 solid #E1E3E6;
         border-radius: 20px;
+        box-sizing: border-box;
+        padding: 0 20px;
     }
     .iconfont {
         color: #F6F6F6;
     }
     .u-voice-icon{
+        margin: 0 10px;
+    }
+    .u-plus-icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 28px;
+        height: 28px;
+        border-radius: 50%;
+        background: #337EFF;
+
         margin: 0 10px;
     }
 }
