--- a/src/plugin/components/Message/text.less
+++ b/src/plugin/components/Message/text.less
@@ -16,6 +16,25 @@
         position: relative;
         box-sizing: border-box;
     }
+    .m-action {
+        margin: 12px -12px 0px -12px;
+        padding: 12px 12px 0px 12px;
+        border-top: 1px solid #EDEDED;
+    }
+    .u-action-btn {
+        width: 221px;
+        height: 32px;
+        line-height: 32px;
+        border: 1px solid #E1E3E6;
+        border-radius: 2px;
+        font-size: 14px;
+        color: #666666;
+        letter-spacing: 0;
+        text-align: center;
+    }
+    .u-action-btn-default {
+        background-color: #FFFFFF;
+    }
 }
 .m-message-left {
     .u-text {
