--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -3,10 +3,12 @@
     height: 100vh;
     flex-direction: column;
     background: #F6F6F6;
-    padding-top: 20px;
+    // padding-top: 20px;
     box-sizing: border-box;
     .m-view {
+        padding-top: 20px;
         flex: 1;
         overflow: auto;
+        background: #EEEFF0;
     }
 }
