--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -3,12 +3,14 @@
     height: 100vh;
     flex-direction: column;
     background: #F6F6F6;
-    // padding-top: 20px;
     box-sizing: border-box;
     .m-view {
-        padding-top: 20px;
         flex: 1;
         overflow: auto;
         background: #EEEFF0;
+    }
+    .message-content {
+        box-sizing: border-box;
+        height: 100%;
     }
 }
