feat: 体验优化， 增加表情包

--- a/src/plugin/components/ChatBox/index.less
+++ b/src/plugin/components/ChatBox/index.less
@@ -3,16 +3,18 @@
     display: flex;
     justify-items: center;
     align-items: center;
-    height: 56px;
+    min-height: 56px;
+    padding: 5px 0;
     background: #F6F6F6;
     .u-edtior {
         width: 279px;
-        height: 40px;
+        min-height: 40px;
+        max-height: 80px;
         background: #FFFFFF;
         border: 0 solid #E1E3E6;
         border-radius: 20px;
         box-sizing: border-box;
-        padding: 0 60px 0 20px;
+        padding: 8px 60px 8px 20px;
     }
     .iconfont {
         color: #F6F6F6;
