--- a/src/plugin/components/Portrait/index.less
+++ b/src/plugin/components/Portrait/index.less
@@ -1,551 +1,25 @@
-.portrait_img {
-  background-image: url('../../assets/img/emoji/emoji.png');
-  background-size: 32px auto;
-}
+@prefix: m-Portrait;
 
-.portrait_icon_emoji_37 {
-  background-position: -0px -0px;
-}
-.portrait_icon_emoji_00 {
-  background-position: -0px -32px;
-}
-.portrait_icon_emoji_02 {
-  background-position: -0px -64px;
-}
-.portrait_icon_emoji_03 {
-  background-position: -0px -96px;
-}
-.portrait_icon_emoji_04 {
-  background-position: -0px -128px;
-}
-.portrait_icon_emoji_05 {
-  background-position: -0px -158px;
-}
-.portrait_icon_emoji_06 {
-  background-position: -0px -192px;
-}
-.portrait_icon_emoji_07 {
-  background-position: -0px -224px;
-}
-.portrait_icon_emoji_08 {
-  background-position: -0px -256px;
-}
-.portrait_icon_emoji_09 {
-  background-position: -0px -288px;
-}
-.portrait_icon_emoji_10 {
-  background-position: -0px -318px;
-}
-.portrait_icon_emoji_100 {
-  background-position: -0px -351px;
-}
-.portrait_icon_emoji_101 {
-  background-position: -0px -383px;
-}
-.portrait_icon_emoji_102 {
-  background-position: -0px -415px;
-}
-.portrait_icon_emoji_103 {
-  background-position: -0px -446px;
-}
-.portrait_icon_emoji_104 {
-  background-position: -0px -479px;
-}
-.portrait_icon_emoji_105 {
-  background-position: -0px -511px;
-}
-.portrait_icon_emoji_106 {
-  background-position: -0px -543px;
-}
-.portrait_icon_emoji_107 {
-  background-position: -0px -575px;
-}
-.portrait_icon_emoji_108 {
-  background-position: -0px -606px;
-}
-.portrait_icon_emoji_109 {
-  background-position: -0px -640px;
-}
-.portrait_icon_emoji_11 {
-  background-position: -0px -672px;
-}
-.portrait_icon_emoji_110 {
-  background-position: -0px -702px;
-}
-.portrait_icon_emoji_111 {
-  background-position: -0px -736px;
-}
-.portrait_icon_emoji_112 {
-  background-position: -0px -768px;
-}
-.portrait_icon_emoji_113 {
-  background-position: -0px -800px;
-}
-.portrait_icon_emoji_114 {
-  background-position: -0px -832px;
-}
-.portrait_icon_emoji_115 {
-  background-position: -0px -864px;
-}
-.portrait_icon_emoji_12 {
-  background-position: -0px -894px;
-}
-.portrait_icon_emoji_13 {
-  background-position: -0px -928px;
-}
-.portrait_icon_emoji_14 {
-  background-position: -0px -958px;
-}
-.portrait_icon_emoji_145 {
-  background-position: -0px -992px;
-}
-.portrait_icon_emoji_15 {
-  background-position: -0px -1024px;
-}
-.portrait_icon_emoji_16 {
-  background-position: -0px -1056px;
-}
-.portrait_icon_emoji_160 {
-  background-position: -0px -1088px;
-}
-.portrait_icon_emoji_161 {
-  background-position: -0px -1120px;
-}
-.portrait_icon_emoji_162 {
-  background-position: -0px -1152px;
-}
-.portrait_icon_emoji_163 {
-  background-position: -0px -1184px;
-}
-.portrait_icon_emoji_164 {
-  background-position: -0px -1216px;
-}
-.portrait_icon_emoji_165 {
-  background-position: -0px -1247px;
-}
-.portrait_icon_emoji_166 {
-  background-position: -0px -1280px;
-}
-.portrait_icon_emoji_200 {
-  background-position: -0px -1312px;
-}
-.portrait_icon_emoji_17 {
-  background-position: -0px -1343px;
-}
-.portrait_icon_emoji_18 {
-  background-position: -0px -1376px;
-}
-.portrait_icon_emoji_19 {
-  background-position: -0px -1408px;
-}
-.portrait_icon_emoji_20 {
-  background-position: -0px -1440px;
-}
-.portrait_icon_emoji_21 {
-  background-position: -0px -1472px;
-}
-.portrait_icon_emoji_22 {
-  background-position: -0px -1504px;
-}
-.portrait_icon_emoji_23 {
-  background-position: -0px -1536px;
-}
-.portrait_icon_emoji_24 {
-  background-position: -0px -1568px;
-}
-.portrait_icon_emoji_25 {
-  background-position: -0px -1599px;
-}
-.portrait_icon_emoji_26 {
-  background-position: -0px -1632px;
-}
-.portrait_icon_emoji_27 {
-  background-position: -0px -1664px;
-}
-.portrait_icon_emoji_28 {
-  background-position: -0px -1696px;
-}
-.portrait_icon_emoji_29 {
-  background-position: -0px -1728px;
-}
-.portrait_icon_emoji_30 {
-  background-position: -0px -1760px;
-}
-.portrait_icon_emoji_31 {
-  background-position: -0px -1792px;
-}
-.portrait_icon_emoji_32 {
-  background-position: -0px -1823px;
-}
-.portrait_icon_emoji_33 {
-  background-position: -0px -1855px;
-}
-.portrait_icon_emoji_34 {
-  background-position: -0px -1887px;
-}
-.portrait_icon_emoji_35 {
-  background-position: -0px -1920px;
-}
-.portrait_icon_emoji_36 {
-  background-position: -0px -1952px;
-}
-.portrait_icon_emoji_01 {
-  background-position: -0px -1984px;
-}
-.portrait_icon_emoji_38 {
-  background-position: -0px -2014px;
-}
-.portrait_icon_emoji_39 {
-  background-position: -0px -2046px;
-}
-.portrait_icon_emoji_40 {
-  background-position: -0px -2080px;
-}
-.portrait_icon_emoji_41 {
-  background-position: -0px -2112px;
-}
-.portrait_icon_emoji_42 {
-  background-position: -0px -2144px;
-}
-.portrait_icon_emoji_43 {
-  background-position: -0px -2175px;
-}
-.portrait_icon_emoji_44 {
-  background-position: -0px -2208px;
-}
-.portrait_icon_emoji_45 {
-  background-position: -0px -2240px;
-}
-.portrait_icon_emoji_46 {
-  background-position: -0px -2271px;
-}
-.portrait_icon_emoji_47 {
-  background-position: -0px -2304px;
-}
-.portrait_icon_emoji_48 {
-  background-position: -0px -2336px;
-}
-.portrait_icon_emoji_49 {
-  background-position: -0px -2368px;
-}
-.portrait_icon_emoji_50 {
-  background-position: -0px -2399px;
-}
-.portrait_icon_emoji_51 {
-  background-position: -0px -2432px;
-}
-.portrait_icon_emoji_52 {
-  background-position: -0px -2464px;
-}
-.portrait_icon_emoji_53 {
-  background-position: -0px -2495px;
-}
-.portrait_icon_emoji_54 {
-  background-position: -0px -2526px;
-}
-.portrait_icon_emoji_55 {
-  background-position: -0px -2560px;
-}
-.portrait_icon_emoji_56 {
-  background-position: -0px -2590px;
-}
-.portrait_icon_emoji_57 {
-  background-position: -0px -2624px;
-}
-.portrait_icon_emoji_58 {
-  background-position: -0px -2656px;
-}
-.portrait_icon_emoji_59 {
-  background-position: -0px -2687px;
-}
-.portrait_icon_emoji_60 {
-  background-position: -0px -2719px;
-}
-.portrait_icon_emoji_61 {
-  background-position: -0px -2751px;
-}
-.portrait_icon_emoji_62 {
-  background-position: -0px -2783px;
-}
-.portrait_icon_emoji_63 {
-  background-position: -0px -2816px;
-}
-.portrait_icon_emoji_64 {
-  background-position: -0px -2848px;
-}
-.portrait_icon_emoji_65 {
-  background-position: -0px -2879px;
-}
-.portrait_icon_emoji_66 {
-  background-position: -0px -2910px;
-}
-.portrait_icon_emoji_67 {
-  background-position: -0px -2942px;
-}
-.portrait_icon_emoji_68 {
-  background-position: -0px -2974px;
-}
-.portrait_icon_emoji_69 {
-  background-position: -0px -3008px;
-}
-.portrait_icon_emoji_70 {
-  background-position: -0px -3040px;
-}
-.portrait_icon_emoji_71 {
-  background-position: -0px -3071px;
-}
-.portrait_icon_emoji_72 {
-  background-position: -0px -3103px;
-}
-.portrait_icon_emoji_73 {
-  background-position: -0px -3135px;
-}
-.portrait_icon_emoji_74 {
-  background-position: -0px -3167px;
-}
-.portrait_icon_emoji_75 {
-  background-position: -0px -3200px;
-}
-.portrait_icon_emoji_76 {
-  background-position: -0px -3231px;
-}
-.portrait_icon_emoji_77 {
-  background-position: -0px -3263px;
-}
-.portrait_icon_emoji_78 {
-  background-position: -0px -3296px;
-}
-.portrait_icon_emoji_79 {
-  background-position: -0px -3327px;
-}
-.portrait_icon_emoji_80 {
-  background-position: -0px -3358px;
-}
-.portrait_icon_emoji_81 {
-  background-position: -0px -3392px;
-}
-.portrait_icon_emoji_82 {
-  background-position: -0px -3422px;
-}
-.portrait_icon_emoji_83 {
-  background-position: -0px -3455px;
-}
-.portrait_icon_emoji_84 {
-  background-position: -0px -3486px;
-}
-.portrait_icon_emoji_85 {
-  background-position: -0px -3519px;
-}
-.portrait_icon_emoji_86 {
-  background-position: -0px -3552px;
-}
-.portrait_icon_emoji_87 {
-  background-position: -0px -3584px;
-}
-.portrait_icon_emoji_88 {
-  background-position: -0px -3615px;
-}
-.portrait_icon_emoji_89 {
-  background-position: -0px -3647px;
-}
-.portrait_icon_emoji_90 {
-  background-position: -0px -3680px;
-}
-.portrait_icon_emoji_91 {
-  background-position: -0px -3711px;
-}
-.portrait_icon_emoji_92 {
-  background-position: -0px -3744px;
-}
-.portrait_icon_emoji_93 {
-  background-position: -0px -3775px;
-}
-.portrait_icon_emoji_94 {
-  background-position: -0px -3807px;
-}
-.portrait_icon_emoji_95 {
-  background-position: -0px -3839px;
-}
-.portrait_icon_emoji_96 {
-  background-position: -0px -3871px;
-}
-.portrait_icon_emoji_97 {
-  background-position: -0px -3904px;
-}
-.portrait_icon_emoji_98 {
-  background-position: -0px -3936px;
-}
-.portrait_icon_emoji_99 {
-  background-position: -0px -3968px;
-}
-
-
-// 新增表情包
-.portrait_icon_new_emoji_01 {
-   background-position: 0px -4002px;
-}
-
-.portrait_icon_1f641 {
-    background-position: 0px -4035px;
-}
-
-.portrait_icon_1f628 {
-  background-position: 0px -4071px;
-}
-
-.portrait_icon_1f629 {
-  background-position:0px -4110px;
-}
-
-.portrait_icon_1f615 {
-  background-position:0px -4147px;
-}
-
-.portrait_icon_1f62a {
-  background-position:0px -4181px;
-}
-
-.portrait_icon_1f4aa-1f3fc {
-  background-position:0px -4219px;
-}
-
-.portrait_icon_new_emoji_02 {
-  background-position: 0px -4262px;
-}
-
-.portrait_icon_new_emoji_05 {
-  background-position:0px -4301px;
-}
-
-.portrait_icon_new_emoji_06 {
-  background-position: 0px -4342px;
-}
-
-.portrait_icon_1f63e {
-  background-position: 0px -4380px;
-}
-
-
-.portrait_icon_1f608 {
-  background-position: 0px -4420px;
-}
-
-
-.portrait_icon_new_emoji_03 {
-  background-position: 0px -4458px;
-}
-
-
-.portrait_icon_new_emoji_23 {
-  background-position: 0px -4495px;
-}
-
-.portrait_icon_1f437 {
-  background-position: 0px -4533px;
-}
-
-.portrait_icon_new_emoji_25 {
-  background-position: 0px -4569px;
-}
-
-.portrait_icon_new_emoji_24 {
-  background-position: 0px -4607px;
-}
-
-
-.portrait_icon_1f41e {
-  background-position: 0px -4646px;
-}
-
-.portrait_icon_new_emoji_30 {
-  background-position: 0px -4682px;
-}
-
-.portrait_icon_new_emoji_28 {
-  background-position: 0px -4720px;
-}
-
-.portrait_icon_new_emoji_08 {
-  background-position: 0px -4760px;
-}
-
-.portrait_icon_new_emoji_18 {
-  background-position: 0px -4797px;
-}
-
-.portrait_icon_new_emoji_19 {
-  background-position: 0px -4834px;
-}
-
-
-.portrait_icon_new_emoji_20 {
-  background-position: 0px -4869px;
-}
-
-
-.portrait_icon_new_emoji_21 {
-  background-position: 0px -4909px;
-}
-
-
-.portrait_icon_new_emoji_22 {
-  background-position: 0px -4947px;;
-}
-
-.portrait_icon_new_emoji_10 {
-  background-position:0px -4987px;
-}
-
-.portrait_icon_1f642 {
-  background-position: 0px -5024px;
-}
-
-.portrait_icon_1f602 {
-  background-position: 0px -5058px;
-}
-
-.portrait_icon_1f61d {
-  background-position: 0px -5097px;
-}
-
-.portrait_icon_new_emoji_11 {
-  background-position: 0px -5138px;
-}
-
-.portrait_icon_1f630 {
-  background-position: 0px -5175px;
-}
-
-.portrait_icon_1f60c {
-  background-position: 0px -5211px;
-}
-
-.portrait_icon_1f47b {
-  background-position: 0px -5248px;
-}
-
-.portrait_icon_1f49d {
-  background-position: 0px -5284px;
-}
-
-.portrait_icon_1f64f-1f3fc{
-  background-position: 0px -5324px;
-}
-
-.portrait_icon_1f388 {
-  background-position:0px -5367px;
-}
-
-.portrait_icon_new_emoji_09{
-    background-position: 0px -5406px;
-}
-
-.portrait_icon_new_emoji_07{
-	background-position: 0px -5449px;
-}
-.portrait_icon_1f612{
-	background-position: 0px -5490px;
-}
-.portrait_icon_1f616{
-	background-position: 0px -5531px;
+.@{prefix} {
+  box-sizing: border-box;
+  width: 375px;
+  height: 240px;
+  padding: 0;
+  margin-bottom: 34px;
+  .m-Portrait__swiper {
+    height: 220px;
+  }
+  .item__list {
+    display: flex;
+  }
+  .item__icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 13px;
+  }
+  .item__val {
+    width: 32px;
+    height: 32px;
+  }
 }
