--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -4,6 +4,9 @@
     flex-direction: column;
     background: #F6F6F6;
     box-sizing: border-box;
+    .message-content {
+        height: 100%;
+    }
     .m-view {
         flex: 1;
         overflow: auto;
