--- a/src/plugin/components/Message/text.less
+++ b/src/plugin/components/Message/text.less
@@ -1,8 +1,8 @@
 .m-message {
     display: flex;
     align-items:center;
-    padding: 0px 12px;
-    margin: 20px 0px;
+    padding: 20px 12px;
+    // margin: 20px 0px;
     .u-avatar {
         width: 40px;
         height: 40px;
