fix: 修复握手emoji数据错误问题

--- a/src/plugin/components/Portrait/emoji.less
+++ b/src/plugin/components/Portrait/emoji.less
@@ -126,6 +126,9 @@
 .portrait_icon_emoji_166 {
   background-position: -0Px -1280Px;
 }
+.portrait_icon_emoji_167 {
+  background-position: -0Px -1312Px;
+}
 .portrait_icon_emoji_200 {
   background-position: -0Px -1312Px;
 }
