--- a/src/plugin/components/Message/im-video/index.less
+++ b/src/plugin/components/Message/im-video/index.less
@@ -30,7 +30,10 @@
     width: 6px;
   }
   .u-video {
-    display: block;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 140px;
     max-height: 140px;
     min-width: 20px;
@@ -38,5 +41,20 @@
     border-radius: 8px;
     background: #000;
     cursor: pointer;
+  }
+  .u-video-info {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 20px;
+    padding: 5px 3px;
+    color: #fff;
+    font-size: 10px;
+    text-align: right;
   }
 }
