--- a/src/plugin/components/Message/im-systip/systip.less
+++ b/src/plugin/components/Message/im-systip/systip.less
@@ -1,6 +1,6 @@
 .m-systip {
     text-align: center;
-    margin-bottom: 22px;
+    margin:  22px 0px;
     .u-tip {
         padding: 4px 12px;
         background: #D0D3D9;
