--- a/src/plugin/components/Message/im-text/text.less
+++ b/src/plugin/components/Message/im-text/text.less
@@ -1,6 +1,5 @@
 .m-message {
     display: flex;
-    align-items: center;
     padding: 10px 12px;
     .portrait_icon {
         display: inline-block;
@@ -16,6 +15,9 @@
         text-align: justify;
         position: relative;
         box-sizing: border-box;
+    }
+    .u-text-arrow {
+        margin-top: 15px;
     }
     .m-action {
         margin: 12px -12px 0px -12px;
@@ -49,7 +51,7 @@
         border-top-color: transparent;
         border-bottom-color: transparent;
         width: 0px;
-        height: 0px; 
+        height: 0px;
     }
 }
 .m-message-right {
