--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -2,64 +2,92 @@
   display: flex;
   padding: 10px 12px;
   .portrait_icon {
-      display: inline-block;
-      width: 21px;
-      height: 21px;
-      vertical-align: middle;
+    display: inline-block;
+    width: 21px;
+    height: 21px;
+    vertical-align: middle;
   }
   .u-text {
-      max-width: 245px;
-      padding: 12px;
-      border-radius: 4px;
-      font-size: 16px;
-      text-align: justify;
-      position: relative;
-      box-sizing: border-box;
+    max-width: 245px;
+    padding: 12px;
+    border-radius: 4px;
+    font-size: 16px;
+    text-align: justify;
+    position: relative;
+    box-sizing: border-box;
   }
   .u-text-arrow {
-      margin-top: 15px;
+    margin-top: 15px;
+  }
+  .u-qalist {
+    padding-top: 10px;
+    margin-top: 12px;
+    border-top: 1px solid #EBEDF0;
+  }
+  .u-qaitem {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    color: #1069d6;
+  }
+  .u-dot {
+    width: 8px;
+    height: 8px;
+    margin-right: 4px;
+    border-radius: 8px;
+    background-color: #1069d6;
   }
   .u-action {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 10px;
-      border-top: 1px solid #EBEDF0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    margin-top: 12px;
+    border-top: 1px solid #EBEDF0;
   }
   .u-button {
-      flex: 1;
-      text-align: center;
+    min-width: 70px;
+    flex: 1;
+    text-align: center;
+  }
+  .u-hr {
+    width: 1px;
+    height: 30px;
+    background-color: #EBEDF0;
+  }
+  .u-tip {
+    margin-left: 6px;
   }
 }
 
 .m-message-left {
   .u-text {
-      background: #FFFFFF;
-      color: #333333;
+    background: #FFFFFF;
+    color: #333333;
   }
   .u-text-arrow {
-      border:  solid 6px;
-      border-right-color: #fff;
-      border-left-color: transparent;
-      border-top-color: transparent;
-      border-bottom-color: transparent;
-      width: 0px;
-      height: 0px;
+    border:  solid 6px;
+    border-right-color: #fff;
+    border-left-color: transparent;
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    width: 0px;
+    height: 0px;
   }
 }
 .m-message-right {
   flex-direction: row-reverse;
   .u-text {
-      background: #337EFF;
-      color: #fff;
+    background: #337EFF;
+    color: #fff;
   }
   .u-text-arrow {
-      border:  solid 6px;
-      border-left-color: #337EFF;
-      border-right-color: transparent;
-      border-top-color: transparent;
-      border-bottom-color: transparent;
-      width: 0px;
-      height: 0px;
+    border:  solid 6px;
+    border-left-color: #337EFF;
+    border-right-color: transparent;
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    width: 0px;
+    height: 0px;
   }
 }
