主评价的流程,还有好多点啊

--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -17,13 +17,18 @@
 }
 
 .m-evaluation_icon_345level {
-   
+   .m-evaluation_icon_content{
+       padding: 0px 8px;
+   }
 }
 
 .m-evaluation {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    .m-evaluation_icon_text {
+        margin: 10px 0px 18px 0px;
+    }
 }
 
 .m-evaluation_tags {
