--- a/src/plugin/components/Message/im-text/text.less
+++ b/src/plugin/components/Message/im-text/text.less
@@ -35,6 +35,13 @@
         letter-spacing: 0;
         text-align: center;
     }
+    .u-action-btn-disabled {
+        background: #F2F2F5;
+        border: 1px solid #E1E3E6;
+        border-radius: 2px;
+        color: #999999;
+        pointer-events: none;
+    }
     .u-action-btn-default {
         background-color: #FFFFFF;
     }
