重新连接会话

--- a/src/plugin/components/Message/im-text/text.less
+++ b/src/plugin/components/Message/im-text/text.less
@@ -50,6 +50,7 @@
     .u-text {
         background: #FFFFFF;
         color: #333333;
+        word-break: break-word;
     }
     .u-text-arrow {
         border:  solid 6px;
