--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -16,6 +16,16 @@
     position: relative;
     box-sizing: border-box;
   }
+  .u-textarea {
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    margin-top: 12px;
+    font-size: 12px;
+    border: 1px solid #EBEDF0;
+
+  }
   .u-text-arrow {
     margin-top: 15px;
   }
