--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -13,4 +13,19 @@
         overflow: auto;
         background: #EEEFF0;
     }
+    .m-bot {
+        padding-top: 10px;
+        white-space: nowrap;
+        &-item {
+            display: inline-block;
+            padding: 4px 10px;
+            margin-left: 10px;
+            font-size: 12px;
+            color: #666;
+            text-align: center;
+            border: 1px solid #e1e3e6;
+            background-color: #fff;
+            border-radius: 14px;
+        }
+    }
 }
