--- a/src/plugin/components/FloatLayout/index.less
+++ b/src/plugin/components/FloatLayout/index.less
@@ -7,17 +7,29 @@
     top: 0px;
     left: 0px;
     z-index: 1;
+    visibility: hidden;
+    transition: visibility 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
     .m-FloatLayout-mask {
-        opacity: 0.2;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        z-index: -1;
+        opacity: 0;
+        transition: opacity 150ms ease-in;
         background: #000000;
-        flex: 1;
         z-index: 10;
     }
     .m-FloatLayout-layout {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100vw;
         display: flex;
         flex-direction: column;
         background-color: #fff;
         z-index: 10;
+        transform: translate3d(0, 100%, 0);
+        transition: transform 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
     }
     .layout-title {
         display: flex;
@@ -38,5 +50,15 @@
     }
     .layout-body_content_scroll_body {
         padding: 16px;
+    }
+
+    &--active {
+        visibility: visible;
+        .m-FloatLayout-layout {
+            transform: translate3d(0, 0, 0);
+        }
+        .m-FloatLayout-mask {
+            opacity: 0.2;
+        }
     }
 }
