会话关闭评价流程

--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -29,12 +29,17 @@
     .m-evaluation_icon_text {
         margin: 10px 0px 18px 0px;
     }
+    .u-RequiredTip {
+      color: #f24957;
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
 }
 
 .m-evaluation_tags {
     display: flex;
     justify-content: space-between;
-    padding: 10px 45px;
+    padding: 10px 30px;
     flex-wrap: wrap;
     .m-evaluation_tags_item {
         line-height: 28px;
@@ -64,6 +69,7 @@
 }
 
 .m-evaluation_mark {
+    margin: 16px 0px;
     display: flex;
     justify-content: center;
     .u-mark {
