--- a/src/plugin/components/BotList/m-card/index.less
+++ b/src/plugin/components/BotList/m-card/index.less
@@ -1,3 +1,20 @@
+// 多行省略 ellipsis
+.fn_line_clamp(@line: 2) {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: @line;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
+
+// 单行省略
+.fn_ellipsis() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .m-card {
   box-sizing: border-box;
   display: flex;
@@ -30,11 +47,8 @@
   .u-title {
     flex: 1;
     width: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
     font-size: 12px;
+    .fn_line_clamp(2);
   }
   .u-info {
     max-width: 50px;
@@ -44,11 +58,13 @@
     font-size: 12px;
     color: #333;
     text-align: right;
+    .fn_ellipsis();
   }
   .u-attr2 {
     font-size: 12px;
     color: #999;
     text-align: right;
+    .fn_ellipsis();
   }
   .u-right-bottom {
     display: flex;
@@ -58,19 +74,13 @@
     width: 0;
     font-size: 12px;
     color: #999;
-    overflow: hidden;
-    word-wrap: normal;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    .fn_ellipsis();
   }
   .u-attr3 {
     max-width: 70px;
     margin-left: 15px;
     font-size: 12px;
     color: #fe6112;
-    overflow: hidden;
-    word-wrap: normal;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    .fn_ellipsis();
   }
 }
