feat: 增加输入联想

--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -28,4 +28,18 @@
             border-radius: 14px;
         }
     }
+    .m-associate {
+        position: relative;
+    }
+    .m-associate-list {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #F6F6F6;
+    }
+    .m-associate-item {
+        padding: 6px 10px;
+        border-bottom: 1px solid #e1e3e6;
+    }
 }
