--- a/src/plugin/components/ParserRichText/Parser/trees/trees.wxml
+++ b/src/plugin/components/ParserRichText/Parser/trees/trees.wxml
@@ -22,6 +22,24 @@
     <!--音频-->
     <audio wx:elif="{{item.name=='audio'}}" src='{{controls[item.attrs.id]?item.attrs.source[controls[item.attrs.id].index]:item.attrs.src}}' id="{{item.attrs.id}}" loop='{{item.attrs.loop}}' controls='{{item.attrs.controls}}' poster='{{item.attrs.poster}}'
       name='{{item.attrs.name}}' author='{{item.attrs.author}}' style="{{item.attrs.style}}" data-id="{{item.attrs.id}}" data-source="{{item.attrs.source}}" binderror="errorEvent" />
+    <!--无序列表 扩展-->
+    <view class="u-ul" wx:elif="{{item.name=='ul'}}">
+      <view class="u-ul-li" wx:for='{{item.children}}' wx:key wx:for-item="liItem">
+        <view class="u-point"></view>
+        <view wx:for='{{liItem.children}}' wx:key wx:for-item="aItem">
+          <trees nodes="{{[aItem]}}" controls="{{controls}}" />
+        </view>
+      </view>
+    </view>
+    <!--有序列表 扩展-->
+    <view class="u-ol" wx:elif="{{item.name=='ol'}}">
+      <view class="u-ol-li" wx:for-index="idx" wx:for='{{item.children}}' wx:key wx:for-item="liItem">
+        <view class="u-index">{{idx+1}}.</view>
+        <view wx:for='{{liItem.children}}' wx:key wx:for-item="aItem">
+          <trees nodes="{{[aItem]}}" controls="{{controls}}" />
+        </view>
+      </view>
+    </view>
     <!--富文本-->
     <rich-text wx:else class="{{item.name}}" style="{{cssHandler.getStyle(item.attrs.style,'block')}}" nodes="{{cssHandler.setStyle(item)}}" />
   </block>
