--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -12,7 +12,7 @@
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
-    text-align: justify;
+    // text-align: justify;
     position: relative;
     box-sizing: border-box;
   }
