--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -8,23 +8,30 @@
     vertical-align: middle;
   }
   .u-text {
+    position: relative;
     max-width: 245px;
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
-    // text-align: justify;
     position: relative;
     box-sizing: border-box;
   }
   .u-textarea {
     box-sizing: border-box;
-    width: 100%;
+    width: 220px;
     height: 50px;
     padding: 10px;
     margin-top: 12px;
     font-size: 12px;
-    border: 1px solid #EBEDF0;
-
+    border: 1px solid #e4e7ed;
+    background: #f5f7fa;
+    color: #c0c4cc;
+  }
+  .u-textareaInput {
+    box-sizing: border-box;
+    width: 100%;
+    height: 120px;
+    padding: 10px 15px;
   }
   .u-text-arrow {
     margin-top: 15px;
@@ -35,30 +42,44 @@
     border-top: 1px solid #EBEDF0;
   }
   .u-qaitem {
+    position: relative;
     display: flex;
     align-items: center;
-    height: 30px;
+    padding-left: 12px;
     color: #1069d6;
   }
   .u-dot {
-    width: 8px;
-    height: 8px;
-    margin-right: 4px;
-    border-radius: 8px;
+    position: absolute;
+    left: 0;
+    top: 8px;
+    width: 6px;
+    height: 6px;
+    border-radius: 6px;
     background-color: #1069d6;
   }
   .u-action {
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translateX(100%);
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
-    padding-top: 10px;
-    margin-top: 12px;
-    border-top: 1px solid #EBEDF0;
+    height: 100%;
+    padding-left: 12px;
   }
   .u-button {
-    min-width: 70px;
-    flex: 1;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;
+    height: 28px;
+    border-radius: 28px;
+    background: #fff;
+    &:nth-of-type(1) {
+      margin-bottom: 12px;
+    }
   }
   .u-hr {
     width: 1px;
