--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -10,6 +10,7 @@
   .u-text {
     position: relative;
     max-width: 245px;
+    min-height: 65px;
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
@@ -70,6 +71,7 @@
     padding-left: 12px;
   }
   .u-button {
+    flex: 0 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
