--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -9,13 +9,15 @@
   }
   .u-text {
     position: relative;
-    max-width: 245px;
-    min-height: 65px;
+    width: 245px;
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
     position: relative;
     box-sizing: border-box;
+  }
+  .u-text-limit {
+    min-height: 65px;
   }
   .u-textarea {
     box-sizing: border-box;
