--- a/src/plugin/components/Modal/index.less
+++ b/src/plugin/components/Modal/index.less
@@ -83,6 +83,10 @@
     background: #337EFF;
   }
 
+  &__large {
+    width: 100%;
+  }
+
   /* modifiers */
   &--active {
     visibility: visible;
