--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -37,6 +37,7 @@
         bottom: 0;
         width: 100%;
         background-color: #F6F6F6;
+        z-index: 100;
     }
     .m-associate-item {
         padding: 6px 10px;
