--- a/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
+++ b/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
@@ -9,10 +9,7 @@
   width: 221px;
   height: 32px;
   margin: 0 auto;
-  margin-bottom: 12px;
+  margin-top: 12px;
   color: #fff;
   background: #337EFF;
-  &:nth-last-of-type(1) {
-    margin-bottom: 0;
-  }
 }
