perf: 完善混合模版

--- a/src/plugin/components/Message/im-bot/TplOrderStatus/index.less
+++ b/src/plugin/components/Message/im-bot/TplOrderStatus/index.less
@@ -20,14 +20,15 @@
 }
 
 .u-list-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 221px;
   height: 32px;
-  margin-bottom: 10px;
-  line-height: 32px;
-  font-size: 14px;
-  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 12px;
   color: #fff;
-  background: #257ce4;
-  border-radius: 4px;
+  background: #337EFF;
   &:nth-last-of-type(1) {
     margin-bottom: 0;
   }
