--- a/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
+++ b/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
@@ -2,6 +2,13 @@
   padding: 12px;
 }
 
+.u-img {
+  max-width: 100%;
+  width: auto;
+  max-width: 220px;
+  width: 200px;
+}
+
 .u-link {
   display: flex;
   align-items: center;
