--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -12,15 +12,18 @@
     padding: 0px 7px;
   }
   .m-Info_btn {
-    display: flex;
-    padding: 8px 10px;
-    border-bottom: 1px solid #ccc;
+    margin-right: 15px;
   }
-  .m-Info_btn:first-child {
-    border-top: 1px solid #ccc;
+  .m-Info_btn_item:first-child {
+    border-top: 1px solid #d6e4ef;
   }
   .m-Info_btn_con {
     padding: 0px 10px;
     margin-top: 15px;
+  }
+  .m-Info_btn_item {
+    display: flex;
+    padding: 10px 10px;
+    border-bottom: 1px solid #d6e4ef;
   }
 }
