--- a/src/plugin/components/Message/im-bot/TplActionList/index.less
+++ b/src/plugin/components/Message/im-bot/TplActionList/index.less
@@ -1,18 +1,8 @@
-.m-order-status {
-  color: #333;
-}
-
 .u-label {
   padding: 9px 12px;
-  border-bottom: 1px solid #ebebeb;
   font-size: 14px;
-}
-
-.u-title {
-  padding: 12px 12px 0 12px;
-  color: #222;
-  font-size: 14px;
-  text-align: left;
+  color: #333;
+  border-bottom: 1px solid #EDEDED;
 }
 
 .u-list {
@@ -28,8 +18,8 @@
   margin: 0 auto;
   margin-bottom: 12px;
   font-size: 14px;
-  color: #fff;
-  background: #337EFF;
+  color: #333;
+  border: 1px solid #337EFF;
   &:nth-last-of-type(1) {
     margin-bottom: 0;
   }
