--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -22,7 +22,7 @@
   .u-textarea {
     box-sizing: border-box;
     width: 220px;
-    height: 50px;
+    min-height: 50px;
     padding: 10px;
     margin-top: 12px;
     font-size: 12px;
