feat: 增加退款模版

--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -9,7 +9,7 @@
   }
   .u-text {
     position: relative;
-    width: 245px;
+    min-width: 245px;
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
@@ -17,6 +17,7 @@
     box-sizing: border-box;
   }
   .u-text-limit {
+    width: 245px;
     min-height: 65px;
   }
   .u-textarea {
