--- a/src/plugin/components/Message/im-bot/index.less
+++ b/src/plugin/components/Message/im-bot/index.less
@@ -9,7 +9,7 @@
       vertical-align: middle;
   }
   .u-text {
-      max-width: 245px;
+      max-width: 294px;
       border-radius: 4px;
       font-size: 16px;
       text-align: justify;
@@ -54,6 +54,16 @@
       width: 0px;
       height: 0px;
   }
+}
+
+.z-blue-style {
+    .u-text {
+        background: #337EFF;
+        color: #fff;
+    }
+    .u-text-arrow {
+        border-left-color: #337EFF;
+    }
 }
 
 .u-action {
