--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -9,7 +9,7 @@
   }
   .u-text {
     position: relative;
-    min-width: 245px;
+    max-width: 245px;
     padding: 12px;
     border-radius: 4px;
     font-size: 16px;
