feat: 增加航班详情模版，代码简化

--- a/src/plugin/components/Message/im-bot/TplDetailView/index.less
+++ b/src/plugin/components/Message/im-bot/TplDetailView/index.less
@@ -1,16 +1,9 @@
 @import '../../../../styles/function.less';
 @import '../../../../styles/common.less';
 
-.m-card-layout {
+.m-detail-view {
   width: 230px;
   overflow: hidden;
-}
-
-.u-label {
-  padding: 9px 12px;
-  font-size: 14px;
-  color: #333;
-  border-bottom: 1px solid #EDEDED;
 }
 
 .u-list {
