--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -26,4 +26,22 @@
     padding: 10px 10px;
     border-bottom: 1px solid #d6e4ef;
   }
+
+  .m-Info_item_form_con {
+    padding: 20px 10px;
+  }
+  .m-Info_item_form {
+    margin: 15px 0px;
+  }
+
+  .u-ipt {
+    border: 1px solid #ccc;
+    height: 40px;
+  }
+
+  .u-textarea {
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 140px;
+  }
 }
