--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -44,4 +44,9 @@
     width: 100%;
     height: 140px;
   }
+
+  .m-Info_vip_con {
+    padding: 5px 5px 5px 10px;
+    margin-bottom: 30px;
+  }
 }
