增加商品链接

--- a/src/pages/info/index.less
+++ b/src/pages/info/index.less
@@ -28,7 +28,7 @@
   }
 
   .m-Info_item_form_con {
-    padding: 20px 10px;
+    padding: 0px 10px 20px 10px;
   }
   .m-Info_item_form {
     margin: 15px 0px;
@@ -48,5 +48,8 @@
   .m-Info_vip_con {
     padding: 5px 5px 5px 10px;
     margin-bottom: 30px;
+  }
+  .m-Info_item_form_id_label {
+    margin-bottom: 10px;
   }
 }
