--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -1,21 +1,28 @@
+.m-page-wrapper {
+    background: #eaeaea;
+}
 .m-chat {
     display: flex;
-    height: 100vh;
     flex-direction: column;
-    background: #F6F6F6;
     box-sizing: border-box;
+    width: 100%;
+    height: calc(100vh - 64px);
+    background: #eaeaea;
+    // transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
+    .m-view {
+        flex: 1;
+        overflow: auto;
+        background: #eaeaea;
+    }
     .message-content {
         box-sizing: border-box;
         height: 100%;
     }
-    .m-view {
-        flex: 1;
-        overflow: auto;
-        background: #EEEFF0;
-    }
     .m-bot {
         padding-top: 10px;
+        padding-bottom: 4px;
         white-space: nowrap;
+        background-color: #F6F6F6;
         &-item {
             display: inline-block;
             padding: 4px 10px;
@@ -42,5 +49,29 @@
     .m-associate-item {
         padding: 6px 10px;
         border-bottom: 1px solid #e1e3e6;
+    }
+}
+
+.u-chatbox {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    background-color: #F6F6F6;
+    // transition: transform 0ms cubic-bezier(0.36, 0.66, 0.04, 1);o
+    &.open {
+        transform: translateY(-272px);
+    }
+}
+
+.u-funcbox {
+    position: fixed;
+    left: 0;
+    top: 100%;
+    background-color: #F6F6F6;
+    opacity: 0;
+    transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
+    &.open {
+        transform: translateY(-100%);
+        opacity: 1;
     }
 }
