--- a/src/plugin/components/Message/im-card/index.less
+++ b/src/plugin/components/Message/im-card/index.less
@@ -1,3 +1,20 @@
+// 多行省略 ellipsis
+.fn_line_clamp(@line: 2) {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: @line;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
+
+// 单行省略
+.fn_ellipsis() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .m-message {
   display: flex;
   padding: 10px 12px;
@@ -7,17 +24,63 @@
       height: 21px;
       vertical-align: middle;
   }
-  .u-text {
-      max-width: 245px;
-      padding: 12px;
-      border-radius: 4px;
-      font-size: 16px;
-      // text-align: justify;
-      position: relative;
-      box-sizing: border-box;
-  }
   .u-text-arrow {
       margin-top: 15px;
+  }
+  .m-product-card {
+    display: flex;
+    padding: 12px;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  .m-product-card_pic {
+    width: 80px;
+    height: 80px;
+  }
+  .m-product-card_pic_img {
+    width: 100%;
+    height: 100%;
+  }
+  .m-product-card_right {
+    flex: 1;
+    padding: 5px 5px 0px 10px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .m-product-card_content {
+    width: 295px;
+    position: relative;
+    box-sizing: border-box;
+    background: #FFFFFF;
+    border-radius: 8px;
+  }
+  .m-product-card_right_title {
+    .fn_ellipsis();
+    font-size: 12px;
+    color: #333333;
+    letter-spacing: 0;
+  }
+  .m-product-card_right_desc {
+    .fn_line_clamp();
+    font-size: 12px;
+    color: #999999;
+    letter-spacing: 0;
+  }
+  .m-product-card_right_note {
+    font-size: 12px;
+    color: #FE6112;
+    letter-spacing: 0;
+  }
+  .m-product-card_action {
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+    color: #337EFF;
+    letter-spacing: 0;
+    text-align: center;
+    border-top: 1px solid #EBEDF0;
   }
 }
 .m-message-left {
@@ -44,7 +107,7 @@
   }
   .u-text-arrow {
       border:  solid 6px;
-      border-left-color: #337EFF;
+      border-left-color: #fff;
       border-right-color: transparent;
       border-top-color: transparent;
       border-bottom-color: transparent;
