--- a/src/pages/product/index.less
+++ b/src/pages/product/index.less
@@ -11,4 +11,21 @@
   .Info_item_title_text {
     padding: 0px 7px;
   }
+  .m-Info_item_form_con {
+    padding: 0px 10px 20px 10px;
+  }
+  .m-Info_item_form {
+    margin: 15px 0px;
+  }
+
+  .u-ipt {
+    border: 1px solid #ccc;
+    height: 40px;
+  }
+
+  .u-textarea {
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 140px;
+  }
 }
