--- a/src/plugin/components/Bot/m-detail-view-list/index.less
+++ b/src/plugin/components/Bot/m-detail-view-list/index.less
@@ -6,6 +6,14 @@
   overflow: hidden;
 }
 
+.u-list-item-wrap {
+  overflow: hidden;
+  margin-bottom: 10px;
+  &:nth-last-of-type(1) {
+    margin-bottom: 0;
+  }
+}
+
 .u-list-item {
   float: left;
   box-sizing: border-box;
