feat: bot增加1s锁定优化

--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -35,6 +35,10 @@
             border-radius: 14px;
         }
     }
+    .z-bot-disable {
+        background: #f5f7fa;
+        color: #c0c4cc;
+    }
     .m-associate {
         position: relative;
     }
