--- a/src/plugin/components/Message/im-card/index.less
+++ b/src/plugin/components/Message/im-card/index.less
@@ -82,6 +82,103 @@
     text-align: center;
     border-top: 1px solid #EBEDF0;
   }
+  .m-order-card_right_title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 12px;
+    color: #333333;
+    letter-spacing: 0;
+  }
+  .m-order-card_right_title_left {
+    flex: 1;
+    .fn_ellipsis();
+  }
+  .m-order-card_right_title_right {
+    width: 60px;
+    text-align: right;
+    .fn_ellipsis();
+  }
+  .m-order-card_right_desc {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .m-order-card_right_desc_left {
+    .fn_line_clamp();
+    font-size: 12px;
+    color: #999999;
+    letter-spacing: 0;
+    flex: 1;
+  }
+  .m-order-card_right_desc_right {
+    width: 60px;
+    text-align: right;
+    .fn_ellipsis();
+    font-size: 12px;
+    color: #999999;
+    letter-spacing: 0;
+  }
+  .m-order-card_action {
+    font-size: 14px;
+    color: #337EFF;
+    letter-spacing: 0;
+    text-align: center;
+    border-top: 1px solid #EBEDF0;
+  }
+  .m-order-card_time {
+    font-size: 12px;
+    color: #333333;
+    letter-spacing: 0;
+    text-align: left;
+    line-height: 20px;
+    border-top: 1px solid #EBEDF0;
+    padding: 16px 16px;
+  }
+  .m-order-card_activity {
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+    color: #337EFF;
+    letter-spacing: 0;
+    text-align: center;
+    border-top: 1px solid #EBEDF0;
+    .fn_ellipsis();
+    padding: 0px 16px;
+  }
+  .m-order-card_tags {
+    font-size: 12px;
+    color: #337EFF;
+    letter-spacing: 0;
+    border-top: 1px solid #EBEDF0;
+    display: flex;
+    padding: 16px;
+  }
+  .m-order-card_tags_btn {
+    background: #FFFFFF;
+    border: 1px solid #337EFF;
+    border-radius: 14px;
+    height: 24px;
+    line-height: 24px;
+    margin-right: 8px;
+    padding: 0px 10px;
+  }
+  .m-order-card_right_note {
+    font-size: 12px;
+    letter-spacing: 0;
+    display: flex;
+    flex-direction: row;
+  }
+  .m-order-card_right_note_left {
+    color: #999999;
+    flex: 1;
+    .fn_ellipsis();
+  }
+  .m-order-card_right_note_right {
+    color: #FE6112;
+    width: 50px;
+    .fn_ellipsis();
+  }
 }
 .m-message-left {
   .u-text {
