--- a/src/plugin/components/Bot/m-shop/index.less
+++ b/src/plugin/components/Bot/m-shop/index.less
@@ -39,7 +39,6 @@
 .u-good-list {
   border-top: 1px solid #e6e6e6;
   border-bottom: 1px solid #e6e6e6;
-  padding-bottom: 10px;
 }
 
 .u-good-wrap {
@@ -48,4 +47,7 @@
 
 .u-good-inner {
   border-bottom: 1px solid #e6e6e6;
+  &:nth-last-of-type(1) {
+    border-bottom: none;
+  }
 }
