fix: iphone6 表情图标错位

--- a/src/plugin/components/ChatBox/index.less
+++ b/src/plugin/components/ChatBox/index.less
@@ -25,6 +25,8 @@
     .u-portrait {
         position: absolute;
         right: 60px;
+        top: 50%;
+        transform: translateY(-50%);
     }
     .u-plus-icon{
         flex: 0 0 auto;
