fix:  修复键盘遮挡bug

--- a/src/plugin/components/ChatBox/index.less
+++ b/src/plugin/components/ChatBox/index.less
@@ -38,7 +38,7 @@
         border-radius: 50%;
         background: #337EFF;
         margin: 0 10px;
-        transition: transform 0.3s;
+        // transition: transform 0.3s;
     }
     .u-show {
         transform: rotate(45deg);
