--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -1,81 +1,104 @@
 .m-page-wrapper {
-    background: #eaeaea;
+  background: #eaeaea;
 }
+
 .m-chat {
-    display: flex;
-    flex-direction: column;
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  background: #eaeaea;
+
+  .u-scroll {
+    position: absolute;
+    width: 375px;
+    left: 0;
+    bottom: 66px;
     box-sizing: border-box;
-    width: 100%;
-    height: calc(100vh - 64px);
-    background: #eaeaea;
-    // transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
-    .m-view {
-        flex: 1;
-        overflow: auto;
-        background: #eaeaea;
-    }
-    .message-content {
-        box-sizing: border-box;
-        height: 100%;
-    }
-    .m-bot {
-        padding-top: 10px;
-        padding-bottom: 4px;
-        white-space: nowrap;
-        background-color: #F6F6F6;
-        &-item {
-            display: inline-block;
-            padding: 4px 10px;
-            margin-left: 10px;
-            font-size: 12px;
-            color: #666;
-            text-align: center;
-            border: 1px solid #e1e3e6;
-            background-color: #fff;
-            border-radius: 14px;
-        }
-    }
-    .z-bot-disable {
-        background: #f5f7fa;
-        color: #c0c4cc;
-    }
-    .m-associate {
-        position: relative;
-    }
-    .m-associate-list {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: #F6F6F6;
-        z-index: 100;
-    }
-    .m-associate-item {
-        padding: 6px 10px;
-        border-bottom: 1px solid #e1e3e6;
-    }
+    height: calc(100vh - 66px);
+    transition: bottom 300ms cubic-bezier(0.36, 0.66, 0.04, 1) 100ms;
+  }
+}
+
+.m-bot {
+  box-sizing: border-box;
+  width: 375px;
+  height: 45px;
+  padding-top: 10px;
+  padding-bottom: 4px;
+  white-space: nowrap;
+  background-color: #F6F6F6;
+
+  &-item {
+    display: inline-block;
+    padding: 4px 10px;
+    margin-left: 10px;
+    font-size: 12px;
+    color: #666;
+    text-align: center;
+    border: 1px solid #e1e3e6;
+    background-color: #fff;
+    border-radius: 14px;
+  }
+}
+
+.z-bot-disable {
+  background: #f5f7fa;
+  color: #c0c4cc;
+}
+
+.m-associate {
+  position: relative;
+}
+
+.m-associate-list {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #F6F6F6;
+  z-index: 100;
+}
+
+.m-associate-item {
+  padding: 6px 10px;
+  border-bottom: 1px solid #e1e3e6;
 }
 
 .u-chatbox {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    background-color: #F6F6F6;
-    // transition: transform 0ms cubic-bezier(0.36, 0.66, 0.04, 1);o
-    &.open {
-        transform: translateY(-272px);
-    }
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: #F6F6F6;
+
+  // transition: transform 0ms cubic-bezier(0.36, 0.66, 0.04, 1);
+  &.open {
+    transform: translateY(-272px);
+  }
 }
 
 .u-funcbox {
-    position: fixed;
-    left: 0;
-    top: 100%;
-    background-color: #F6F6F6;
-    opacity: 0;
-    transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
-    &.open {
-        transform: translateY(-100%);
-        opacity: 1;
-    }
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 100%;
+  background-color: #F6F6F6;
+  opacity: 0;
+  transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
+
+  &.open {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+}
+
+.u-mask {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 375px;
+  height: 0;
+  background: #eaeaea;
+  z-index: 0;
 }
