--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -15,7 +15,7 @@
     left: 0;
     bottom: 66px;
     box-sizing: border-box;
-    height: calc(100vh - 66px);
+    max-height: calc(100vh - 66px);
     transition: bottom 300ms cubic-bezier(0.36, 0.66, 0.04, 1) 100ms;
   }
 }
@@ -85,11 +85,10 @@
   top: 100%;
   background-color: #F6F6F6;
   opacity: 0;
-  transition: all 300ms cubic-bezier(0.36, 0.66, 0.04, 1);
 
   &.open {
-    transform: translateY(-100%);
     opacity: 1;
+    transform: translateY(-100%);
   }
 }
 
