perf: 优化图片上传

--- a/src/plugin/components/Message/im-img/index.less
+++ b/src/plugin/components/Message/im-img/index.less
@@ -27,6 +27,16 @@
     min-width: 20px;
     min-height: 20px;
     border-radius: 8px;
+    background: #fff;
     cursor: pointer;
+  }
+  .u-progress {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 140px;
+    border-radius: 8px;
+    background: #fff;
   }
 }
