--- a/src/plugin/components/ChatBox/index.less
+++ b/src/plugin/components/ChatBox/index.less
@@ -7,7 +7,8 @@
     padding: 5px 0;
     background: #F6F6F6;
     .u-edtior {
-        width: 279px;
+        // width: 279px;
+        width: 307px;
         min-height: 40px;
         max-height: 80px;
         background: #FFFFFF;
