feat: 添加消息弱网菊花，及消息重发

--- a/src/plugin/components/Message/im-text/text.less
+++ b/src/plugin/components/Message/im-text/text.less
@@ -12,12 +12,22 @@
         padding: 12px;
         border-radius: 4px;
         font-size: 16px;
-        // text-align: justify;
         position: relative;
         box-sizing: border-box;
     }
     .u-text-arrow {
         margin-top: 15px;
+    }
+    .u-status {
+        position: absolute;
+        left: -30px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 25px;
+        height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 .m-message-left {
