--- a/src/plugin/components/Message/im-img/index.less
+++ b/src/plugin/components/Message/im-img/index.less
@@ -15,7 +15,7 @@
     height: 40px;
   }
   .u-content {
-    overflow: hidden;
+    position: relative;
   }
   .u-space {
     width: 6px;
@@ -38,5 +38,16 @@
     height: 140px;
     border-radius: 8px;
     background: #fff;
+  }
+  .u-status {
+    position: absolute;
+    left: -30px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
