YSF-30705  【小程序SDK】（评价）评价界面，标签过长时，没有用。。。代替

--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -1,3 +1,10 @@
+// 单行省略
+.fn_ellipsis() {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .m-evaluation_icon_2level,.m-evaluation_icon_345level {
     display: flex;
     justify-content: center;
@@ -42,6 +49,7 @@
     padding: 10px 30px;
     flex-wrap: wrap;
     .m-evaluation_tags_item {
+        .fn_ellipsis();
         line-height: 28px;
         width: 120px;
         height: 28px;
