YSF-30731  【小程序SDK】（评价）评价按钮颜色需要调整：改成七鱼蓝

--- a/src/plugin/components/Message/im-action/action.less
+++ b/src/plugin/components/Message/im-action/action.less
@@ -13,6 +13,17 @@
     letter-spacing: 0;
     text-align: center;
   }
+  .u-action-btn-colorful {
+    width: 221px;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    letter-spacing: 0;
+    text-align: center;
+    background-color: #337EFF;
+  }
   .u-action-btn-disabled {
     background: #F2F2F5;
     border: 1px solid #E1E3E6;
