YSF-30765  【小程序SDK】（评价）评价按钮：赞、踩、星星---等未选择时icon不对

--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -14,6 +14,13 @@
         display: flex;
         justify-content: center;
         align-content: center;
+        align-items: center;
+        .image {
+          width: 27px;
+          height: 27px;
+          vertical-align: middle;
+          text-align: center;
+        }
     }
     .z-sel {
         color: #FFAF0F;
