YSF-30767  【小程序SDK】（访客分流）访客分流界面字体太小，需要调整一下

--- a/src/plugin/components/Message/im-action/action.less
+++ b/src/plugin/components/Message/im-action/action.less
@@ -40,12 +40,12 @@
   margin: 12px -12px 0px -12px;
   padding: 12px 12px 0px 12px;
   border-top: 1px solid #EDEDED;
-  font-size: 14px;
+  font-size: 16px;
   color: #337EFF;
   .u-entry {
     display: flex;
     align-items: center;
-    margin: 8px 0px;
+    // margin: 8px 0px;
   }
   .u-entry:first-child{
     margin-top: 0px;
