YSF-30789  【小程序sdk】action_list模板的按钮文字颜色不一致

--- a/src/plugin/components/Message/im-bot/TplActionList/index.less
+++ b/src/plugin/components/Message/im-bot/TplActionList/index.less
@@ -18,7 +18,7 @@
   margin: 0 auto;
   margin-bottom: 12px;
   font-size: 14px;
-  color: #333;
+  color: #337EFF;
   border: 1px solid #337EFF;
   &:nth-last-of-type(1) {
     margin-bottom: 0;
