YSF-30772  【小程序sdk】抽屉列表底部推上来时，和输入框，键盘重叠展示了

--- a/src/plugin/components/BotDrawerList/index.less
+++ b/src/plugin/components/BotDrawerList/index.less
@@ -24,15 +24,16 @@
       .fn_ellipsis();
     }
     .z-active {
+      position: relative;
       color: #337EFF;
     }
     .z-active:after {
       content: '';
       position: absolute;
-      left: 0;
-      bottom: 4px;
-      width: 100%;
-      height: 3px;
+      width: 120%;
+      left: -10%;
+      height: 4px;
+      bottom: -4px;
       background: #337EFF;
     }
   }
