--- a/src/plugin/components/BotDrawerList/index.less
+++ b/src/plugin/components/BotDrawerList/index.less
@@ -30,8 +30,9 @@
     .z-active:after {
       content: '';
       position: absolute;
-      width: 120%;
-      left: -10%;
+      width: 35px;
+      left: 50%;
+      transform: translateX(-50%);
       height: 4px;
       bottom: -4px;
       background: #337EFF;
