YSF-30790  【小程序sdk】botform模板优化

--- a/src/plugin/components/BotForm/index.less
+++ b/src/plugin/components/BotForm/index.less
@@ -12,13 +12,16 @@
   color: #333;
   margin-bottom: 4px;
 }
-.z-required::before {
-  content: '*';
-  position: absolute;
-  left: -10px;
-  top: 0;
+.z-required {
   color: #5092e1;
 }
+// .z-required::before {
+//   content: '*';
+//   position: absolute;
+//   left: -10px;
+//   top: 0;
+//   color: #5092e1;
+// }
 .u-form-content {
   position: relative;
 }
