YSF-30813  【小程序sdk】第一次接入机器人客服时，键盘唤起时优化

--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -13,9 +13,8 @@
     position: absolute;
     width: 375px;
     left: 0;
-    bottom: 66px;
+    bottom: 0;
     box-sizing: border-box;
-    max-height: calc(100vh - 66px);
     transition: bottom 300ms cubic-bezier(0.36, 0.66, 0.04, 1) 100ms;
   }
 }
