--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -84,18 +84,21 @@
 }
 
 .m-evaluation_mark {
+    position: relative;
     margin: 16px 0px;
     display: flex;
     justify-content: center;
     .u-mark {
         width: 343px;
-        height: 80px;
+        height: 110px;
         border: 1px solid #E1E3E6;
         border-radius: 2px;
         font-size: 14px;
         letter-spacing: 0;
-        padding: 10px;
+        padding: 10px 10px 20px 10px;
         background: #FFFFFF;
+        line-height: 1.5;
+        box-sizing: border-box;
     }
     .u-mark-placeholder {
         font-size: 12px;
@@ -104,7 +107,25 @@
     }
     .u-mark-view {
       overflow: hidden;
+      display: flex;
+      padding-left: 0px;
+      padding-right: 0px;
+      padding-top: 8px;
     }
+    .u-mark-view-inner {
+      overflow: auto;
+      flex: 1;
+      padding-left: 10px;
+      padding-right: 10px;
+    }
+}
+
+.m-evaluation_mark_counter {
+  position: absolute;
+  right: 4px;
+  bottom: 2px;
+  font-size: 12px;
+  color: #cccccc;
 }
 
 
