--- a/src/plugin/components/Evaluation/index.less
+++ b/src/plugin/components/Evaluation/index.less
@@ -95,28 +95,32 @@
         border-radius: 2px;
         font-size: 14px;
         letter-spacing: 0;
-        padding: 10px 10px 20px 10px;
+        padding: 7px 10px 20px 7px;
         background: #FFFFFF;
         line-height: 1.5;
         box-sizing: border-box;
+        letter-spacing: 0px;
     }
     .u-mark-placeholder {
         font-size: 12px;
         color: #999999;
         letter-spacing: 0;
+        padding-top: 8px;
     }
     .u-mark-view {
       overflow: hidden;
       display: flex;
       padding-left: 0px;
       padding-right: 0px;
-      padding-top: 8px;
     }
     .u-mark-view-inner {
       overflow: auto;
       flex: 1;
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 11px;
+      padding-right: 11px;
+      padding-top: 6px;
+      padding-bottom: 2px;
+      box-sizing: border-box;
     }
 }
 
