--- a/src/plugin/components/Message/im-bot/TplOrderLogistic/index.less
+++ b/src/plugin/components/Message/im-bot/TplOrderLogistic/index.less
@@ -1,3 +1,6 @@
+@import '../../../../styles/function.less';
+@import '../../../../styles/common.less';
+
 .u-label {
   padding: 12px;
   font-size: 16px;
@@ -60,11 +63,11 @@
 }
 
 .u-action {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 0;
+  box-sizing: border-box;
+  padding: 10px 20px;
   font-size: 14px;
   color: #337EFF;
+  text-align: center;
   border-top: 1px solid #EDEDED;
+  .fn_ellipsis();
 }
