--- a/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
+++ b/src/plugin/components/Message/im-bot/TplStaticUnion/index.less
@@ -1,15 +1,17 @@
+@import '../../../../styles/function.less';
+@import '../../../../styles/common.less';
 .m-static-union {
   padding: 12px;
 }
 
 .u-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 221px;
   height: 32px;
+  line-height: 32px;
   margin: 0 auto;
   margin-top: 12px;
   color: #fff;
+  text-align: center;
   background: #337EFF;
+  .fn_ellipsis();
 }
