--- a/src/plugin/components/Message/im-bot/TplDetailView/index.less
+++ b/src/plugin/components/Message/im-bot/TplDetailView/index.less
@@ -7,11 +7,11 @@
 }
 
 .u-action {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 0;
+  box-sizing: border-box;
+  padding: 10px 20px;
   font-size: 14px;
   color: #337EFF;
+  text-align: center;
   border-top: 1px solid #EDEDED;
+  .fn_ellipsis();
 }
