YSF-30880  【小程序sdk】热门问题，相似问题，关联问题，多入口的样式需要和移动端一致

--- a/src/plugin/components/Message/im-robot/index.less
+++ b/src/plugin/components/Message/im-robot/index.less
@@ -50,6 +50,7 @@
     display: flex;
     align-items: center;
     padding-left: 12px;
+    margin-bottom: 6px;
     color: #1069d6;
   }
   .u-dot {
