--- a/src/plugin/pages/chat/chat.less
+++ b/src/plugin/pages/chat/chat.less
@@ -64,7 +64,7 @@
 }
 
 .u-chatbox {
-  z-index: 1;
+  z-index: 100;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -77,7 +77,7 @@
 }
 
 .u-funcbox {
-  z-index: 1;
+  z-index: 100;
   position: fixed;
   left: 0;
   top: 100%;
@@ -98,4 +98,19 @@
   height: 0;
   background: #eaeaea;
   z-index: 0;
+}
+
+.u-loading {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 65px;
+  right: 0;
+  background: #eaeaea;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: #ccc;
 }
