feat: 优化分页逻辑

--- a/src/plugin/components/Bot/m-good/index.less
+++ b/src/plugin/components/Bot/m-good/index.less
@@ -79,11 +79,11 @@
   .fn_ellipsis();
 }
 
-.u-url {
-  .u-good-name {
-    color: #5092e1;
-  }
-  .u-good-price {
-    color: #5092e1;
-  }
-}
+// .u-url {
+//   .u-good-name {
+//     color: #5092e1;
+//   }
+//   .u-good-price {
+//     color: #5092e1;
+//   }
+// }
